# spinrate-sales-penetration

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DECISIONS.md  Dockerfile  FAILURES.md  HANDOFF.md  LICENSE  PLAN.md  README.md  fly.toml  pyproject.toml  quadrant-brainstorm.md  wsgi.py
.claude/: launch.json
app/: app.py  calculations.py  charts.py  components.py  constants.py  db.py  filters.py  lailara_frame.py  layout.py
app/views/: at_risk.py  expansion.py  migration.py  quadrant.py
assets/: clientside.js  lailara-frame.css  style.css
docs/brainstorms/: 2026-06-15-spinrate-quadrant-requirements.md
docs/plans/: 2026-06-15-001-feat-penetration-velocity-quadrant-dashboard-plan.md
tests/: conftest.py  test_at_risk.py  test_calculations.py  test_components.py  test_db.py  test_expansion.py  test_migration.py  test_narrative.py  test_palette_drift.py  test_quadrant.py
