[project]
name = "spinrate-sales-penetration"
version = "0.1.0"
description = "Penetration x velocity quadrant dashboard — where distribution meets shelf performance for CPG brands"
requires-python = ">=3.11"
dependencies = [
    "dash>=3.0",
    "plotly>=6.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "dash-ag-grid>=31.0",
    "gunicorn>=22.0",
    "python-dotenv>=1.0",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
